<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="?selectableItemBackground"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        android:background="@drawable/bg_layout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/title"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/blue2"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/title"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="3dp"
        android:id="@+id/desc_notes"
        android:textColor="#393939"
        android:maxLines="2"
        android:fontFamily="sans-serif"
        android:ellipsize="end"
        android:text="@string/discription"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="10sp"
            android:id="@+id/note_time"
            android:layout_marginTop="5dp"
            android:textColor="#888585"
            android:layout_alignParentEnd="true"
            android:text="@string/_12_00_pm"/>
    </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>