<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="10dp">

            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/searchBar"
                style="@style/MaterialSearchBarLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mt_hint="@string/search_notes"
                app:mt_maxSuggestionsCount="10"
                app:mt_navIconEnabled="true"
                app:mt_placeholder="@string/my_note_app"
                app:mt_speechMode="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recView_Notes"
            android:layout_width="match_parent"
            android:background="#F4F4F4"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/sample_notes"
            android:layout_height="match_parent"
            android:scrollbars="none" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_notes"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/blue"
        android:background="?selectableItemBackground"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/add_notes"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add_post"
                android:tint="@color/black" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</RelativeLayout>