<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F4F4"
    tools:context=".Activity.AddEditActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackground"
                android:src="@drawable/back_arrow"
                android:tint="@color/black"
                android:id="@+id/back_btn"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_notes"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/save_notes"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:layout_alignParentEnd="true"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/right_ic"
                    android:tint="@color/black"/>
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:textColor="#393939"
                android:textColorHint="#393939"
                android:hint="@string/title"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.0"
                android:id="@+id/disp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="top"
                android:textColorHint="#393939"
                android:textColor="#393939"
                android:hint="@string/start_note_typing"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>